Switch to JDK 21